 - Add matrix factory for simple creation of standard finite element matrices
 - Collect static solvers in LU and GMRES
 - Bug fixes for Python interface PyDOLFIN
 - Enable use of direct solver for ODE solver (experimental)
 - Remove demo bistable
 - Restructure and cleanup linear algebra
 - Use UMFPACK for LU solver with uBlas matrix types
 - Add templated wrapper class for different uBlas matrix types
 - Add ILU preconditioning for uBlas matrices
 - Add Krylov solver for uBlas sparse matrices (GMRES and BICGSTAB)
 - Add first version of new mesh library (NewMesh, experimental)
 - Add Parametrized::readParameters() to trigger reading of values on set()
 - Remove output of zeros in Octave matrix file format
 - Use uBlas-based vector for Vector if PETSc disabled
 - Add wrappers for uBlas compressed_matrix class
 - Compute eigenvalues using SLEPc (an extension of PETSc)
 - Clean up assembly and linear algebra
 - Add function to solve Ax = b for dense matrices and dense vectors
 - Make it possible to compile without PETSc (--disable-petsc)
 - Much improved ODE solvers
 - Complete multi-adaptive benchmarks reaction and wave
 - Assemble boundary integrals
 - FEM class cleaned up.
 - Fix multi-adaptive benchmark problem reaction
 - Small fixes for Intel C++ compiler version 9.1
 - Test for Intel C++ compiler and configure appropriately
 - Add new classes DenseMatrix and DenseVector (wrappers for ublas)
 - Fix bug in conversion from Gmsh format
0.6.1 [2006-03-28]
 - Regenerate build system in makedist script
 - Update for new FFC syntax: BasisFunction --> TestFunction, TrialFunction
 - Fixes for conversion script dolfin-convert
 - Initial cleanups and fixes for ODE solvers
 - Numerous small fixes to improve portability
 - Remove dolfin:: qualifier on output << in Parameter.h
 - Don't use anonymous classes in demos, gives errors with some compilers
 - Remove KrylovSolver::solver()
 - Fix bug in convection-diffusion demo (boundary condition for pressure), use direct solver